MACRO(SUBDIRLIST result curdir)
     FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
     SET(dirlist "")
     FOREACH(child ${children})
       IF(IS_DIRECTORY ${curdir}/${child})
         LIST(APPEND dirlist ${child})
       ENDIF()
     ENDFOREACH()
     SET(${result} ${dirlist})
ENDMACRO()

SUBDIRLIST(problems ${CMAKE_CURRENT_SOURCE_DIR}/problems)

add_subdirectory(cpp_include)
foreach(problem ${problems})
add_subdirectory(problems/${problem})
endforeach()